Until version 20061001, the version number indicated the extension's release
date. Starting with the 20080224.x series, the first part indicates the version
of avim.js that the extension was based on, while the remaining version part
indicates the version of the extension itself, expressed as a Subversion
revision number.

Version 20060714 (Friday, July 14, 2006)

Version 20061001 (Sunday, October 1, 2006)

Version 20080224.59 (Monday, June 16, 2008)
 - Based on a refactored codebase by Hieu Dang.
 - Added support for Firefox 3 and removed support for Firefox 2.
 - Replaced the status bar radio buttons with an unobtrusive popup menu.
 - Added an identical menu under the Edit menu, for those who hide their status
   bars.
 - Added support for windows other than the main browser window, including the
   Bookmark Properties dialog, the Library window, JavaScript prompt() dialogs,
   and any other XUL document affected by an overlay listed in chrome.manifest.
   The about:config filter bar and the Error Console code bar are not supported.
 - Removed keyboard shortcuts that conflicted with built-in shortcuts and other
   extensions.
 - Replaced the "Off" "input method" with a separate "Enabled" option.
 - Added the Ctrl+Shift+V keyboard shortcut (Cmd+Shift+V on the Mac) to toggle
   AVIM on and off; this shortcut does not conflict with any built-in shortcuts,
   but does conflict with Adblock Plus.
 - Replaced the avim_prefs plain text preferences file with entries in Firefox's
   built-in preferences service. Users of previous versions will have to set
   their input method and other options again.
 - Advanced options can be set using about:config. These options are: the IDs of
   text boxes that AVIM should ignore and the actual methods that comprise Auto.
 - Ensured that any preference change is reflected in every open window, as
   well as windows opened from that point on.
 - Localized into Spanish, because Minh knows Spanish.